force-app/main/default/objects/Recommendation__c/Recommendation__c.object-meta.xml
<CustomObject>
    <description>Contains all the information given by planners when making a recommendation of an action for a change in a clients financial circumstances.</description>
    <label>Recommendation</label>
    <nameField>
        <displayFormat>Rec-{0000000}</displayFormat>
        <label>Recommendation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>