force-app/main/default/objects/Recommendation__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Unused
Flags whether this recommendation type is currently in use</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>