force-app/main/default/objects/Recommendation__c/fields/AdditionalBenefits__c.field-meta.xml
<CustomField>
    <fullName>AdditionalBenefits__c</fullName>
    <description>Indicates which additional benefits are attached to this policy</description>
    <label>Additional benefits</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiver of premium</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Enhanced children&apos;s benefit</fullName>
            </value>
            <value>
                <fullName>Total Permanent Disability</fullName>
            </value>
            <value>
                <fullName>Children&apos;s benefit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>