force-app/main/default/objects/Recommendation__c/fields/Advice__c.field-meta.xml
<CustomField>
    <fullName>Advice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The advice that this recommendation is a part of</description>
    <label>Advice</label>
    <referenceTo>Advice__c</referenceTo>
    <relationshipLabel>Recommendation</relationshipLabel>
    <relationshipName>Recommendation</relationshipName>
    <type>Lookup</type>
</CustomField>