force-app/main/default/objects/Recommendation__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The amount tied to a recommendation such as the lump sum, regular deposit or expected value of a transfer.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>