force-app/main/default/objects/Recommendation__c/fields/CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>CancellationReason__c</fullName>
    <description>The reason that the recommendation has been cancelled. In future, may be upgraded to a picklist.</description>
    <inlineHelpText>The reason the recommendation has been cancelled. This shouldn&#39;t be used if the recommendation was simply declined.</inlineHelpText>
    <label>Cancellation reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>