force-app/main/default/objects/Recommendation__c/fields/ClientInstructions__c.field-meta.xml
<CustomField>
    <fullName>ClientInstructions__c</fullName>
    <description>Used to give instructions on next steps emails</description>
    <label>Client instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>