force-app/main/default/objects/Recommendation__c/fields/DateOfDecision__c.field-meta.xml
<CustomField>
    <fullName>DateOfDecision__c</fullName>
    <description>This is the date that the client either accepted or declined this recommmendation</description>
    <inlineHelpText>This is the date that the client either accepted or declined this recommmendation</inlineHelpText>
    <label>Date of decision</label>
    <type>Date</type>
</CustomField>