force-app/main/default/objects/Recommendation__c/fields/DeferralPeriod__c.field-meta.xml
<CustomField>
    <fullName>DeferralPeriod__c</fullName>
    <description>The number of weeks after a claim is made before payment will begin</description>
    <inlineHelpText>This should be specified in weeks (eg 26 or 52)</inlineHelpText>
    <label>Deferral period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>