force-app/main/default/objects/Recommendation__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who this account should be designated to</description>
    <inlineHelpText>The person who this account should be designated to</inlineHelpText>
    <label>Designation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recommendation (Designation)</relationshipLabel>
    <relationshipName>Recommendation3</relationshipName>
    <type>Lookup</type>
</CustomField>