force-app/main/default/objects/Recommendation__c/fields/DesignationName__c.field-meta.xml
<CustomField>
    <fullName>DesignationName__c</fullName>
    <description>This is the name of the person that this product is designated to. This is for use is data table display and should be deprecated when their functionality improves.</description>
    <label>Designation name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>