force-app/main/default/objects/Recommendation__c/fields/DesignationType__c.field-meta.xml
<CustomField>
    <fullName>DesignationType__c</fullName>
    <description>The kind of designation applied to this account</description>
    <label>Designation type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revocable</fullName>
            </value>
            <value>
                <fullName>Irrevocable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>