force-app/main/default/objects/Recommendation__c/fields/DestinationLegacy__c.field-meta.xml
<CustomField>
    <fullName>DestinationLegacy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account which is receiving funds or undergoing a change</description>
    <label>Destination</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Recommendation</relationshipLabel>
    <relationshipName>Recommendation</relationshipName>
    <type>Lookup</type>
</CustomField>