force-app/main/default/objects/Recommendation__c/fields/DestinationName__c.field-meta.xml
<CustomField>
    <fullName>DestinationName__c</fullName>
    <description>A formula used for displaying the text value of the name of the destination on look up tables. Should be deprecated when the functionality of data tables is improved by Salesforce.</description>
    <formula>PrimaryClientName__c + IF(ISBLANK( JointOwner__c),&quot;&quot;,&quot; &amp; &quot; + JointOwnerName__c) + &quot;&#39;s &quot; + 
IF(
NOT(ISBLANK( DestinationLegacy__c )),

DestinationLegacy__r.Public_Provider_Name__r.Name + &quot; &quot; + DestinationLegacy__r.RecordType.Name,
ProductName__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination name</label>
    <type>Text</type>
</CustomField>