force-app/main/default/objects/Recommendation__c/fields/Employment__c.field-meta.xml
<CustomField>
    <fullName>Employment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A look up to the employer who will be making the payment recommended here</description>
    <label>Employment</label>
    <referenceTo>FinServ__Employment__c</referenceTo>
    <relationshipLabel>Recommendation</relationshipLabel>
    <relationshipName>Contributions</relationshipName>
    <type>Lookup</type>
</CustomField>