force-app/main/default/objects/Recommendation__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>The end date of the policy term</description>
    <label>End date</label>
    <type>Date</type>
</CustomField>