force-app/main/default/objects/Recommendation__c/fields/EstimatedPremium__c.field-meta.xml
<CustomField>
    <fullName>EstimatedPremium__c</fullName>
    <description>The estimated premium associated with the policy</description>
    <label>Estimated premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>