force-app/main/default/objects/Recommendation__c/fields/ExpectedTaxRelief__c.field-meta.xml
<CustomField>
    <fullName>ExpectedTaxRelief__c</fullName>
    <description>Applicable to SIPPs, this is the expected tax relief from a lump or regular</description>
    <label>Expected tax relief</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>