force-app/main/default/objects/Recommendation__c/fields/FulfilmentDeadline__c.field-meta.xml
<CustomField>
    <fullName>FulfilmentDeadline__c</fullName>
    <description>This denotes the date after which the recommendation can no longer be fulfilled, if it hasn&#39;t been already.</description>
    <inlineHelpText>This denotes the date after which the recommendation can no longer be fulfilled, if it hasn&#39;t been already.</inlineHelpText>
    <label>Fulfilment deadline</label>
    <type>Date</type>
</CustomField>