force-app/main/default/objects/Recommendation__c/fields/FulfilmentLegacy__c.field-meta.xml
<CustomField>
    <fullName>FulfilmentLegacy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Unused
The related fulfilment used to carry out this recommendation. Filled automatically when fulfilment is created</description>
    <label>Fulfilment</label>
    <referenceTo>Fulfillment__c</referenceTo>
    <relationshipLabel>Recommendation</relationshipLabel>
    <relationshipName>Recommendation</relationshipName>
    <type>Lookup</type>
</CustomField>