force-app/main/default/objects/Recommendation__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The household to which this recommendation is being made.</description>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recommendation</relationshipLabel>
    <relationshipName>Recommendation</relationshipName>
    <type>Lookup</type>
</CustomField>