force-app/main/default/objects/Recommendation__c/fields/ImportantNotesForSpecialists__c.field-meta.xml
<CustomField>
    <fullName>ImportantNotesForSpecialists__c</fullName>
    <description>A free text area for planners and partners to add comments to this recommendation</description>
    <label>Important notes for specialists</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>