force-app/main/default/objects/Recommendation__c/fields/InvestmentMandate__c.field-meta.xml
<CustomField>
    <fullName>InvestmentMandate__c</fullName>
    <description>This field is used for information only, when the investment mandate is not changing. It will be the investment mandate of the destination after the recommendation is fulfilled.</description>
    <label>Investment mandate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10% equity sustainable</fullName>
            </value>
            <value>
                <fullName>20% equity sustainable</fullName>
            </value>
            <value>
                <fullName>30% equity sustainable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>