force-app/main/default/objects/Recommendation__c/fields/JointOwner__c.field-meta.xml
<CustomField>
    <fullName>JointOwner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The other owner of the recommended product</description>
    <label>Joint owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recommendation (Joint owner)</relationshipLabel>
    <relationshipName>Recommendation2</relationshipName>
    <type>Lookup</type>
</CustomField>