force-app/main/default/objects/Recommendation__c/fields/JointOwnerName__c.field-meta.xml
<CustomField>
    <fullName>JointOwnerName__c</fullName>
    <description>Text formula for name to use for data table display</description>
    <formula>JointOwner__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Joint owner name</label>
    <type>Text</type>
</CustomField>