force-app/main/default/objects/Recommendation__c/fields/NonStandardActionCategory__c.field-meta.xml
<CustomField>
    <fullName>NonStandardActionCategory__c</fullName>
    <description>Used to give broad MI indications of which non-standard fulfilment is being created</description>
    <label>Non-standard action category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update expression of wishes</fullName>
            </value>
            <value>
                <fullName>Top up NI contributions</fullName>
            </value>
            <value>
                <fullName>Complete enhanced annuity form</fullName>
            </value>
            <value>
                <fullName>Fund a cash ISA</fullName>
            </value>
            <value>
                <fullName>Sell shares</fullName>
            </value>
            <value>
                <fullName>Withdraw from external plan</fullName>
                <label>Partial withdrawal from external plan</label>
            </value>
            <value>
                <fullName>Close an external plan</fullName>
                <label>Fully withdraw from and close an external plan</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Change ownership of GIA</fullName>
                <isActive>false</isActive>
                <label>Change ownership of GIA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>