force-app/main/default/objects/Recommendation__c/fields/NonStandardActionInstruction__c.field-meta.xml
<CustomField>
    <fullName>NonStandardActionInstruction__c</fullName>
    <description>Indicates exactly which action should be taken as part of this non-standard recommendation</description>
    <label>Non-standard action instruction</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>