force-app/main/default/objects/Recommendation__c/fields/PaidBy__c.field-meta.xml
<CustomField>
    <fullName>PaidBy__c</fullName>
    <description>Indicates who paid the money associated with this recommendation, eg the client or their employer</description>
    <label>Paid by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>