force-app/main/default/objects/Recommendation__c/fields/PhasingFrequency__c.field-meta.xml
<CustomField>
    <fullName>PhasingFrequency__c</fullName>
    <description>The frequency with which investments into the market are made</description>
    <label>Phasing frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>