force-app/main/default/objects/Recommendation__c/fields/PhasingNotes__c.field-meta.xml
<CustomField>
    <fullName>PhasingNotes__c</fullName>
    <description>A free text description of the phasing needed for this recommendation</description>
    <label>Phasing notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>