force-app/main/default/objects/Recommendation__c/fields/PhasingPeriod__c.field-meta.xml
<CustomField>
    <fullName>PhasingPeriod__c</fullName>
    <description>The number of phases that will occur, eg &apos;6&apos;, for 6 months</description>
    <label>Phasing period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>