force-app/main/default/objects/Recommendation__c/fields/PreRequisiteActionRecommendation__c.field-meta.xml
<CustomField>
    <fullName>PreRequisiteActionRecommendation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to record an action which must occur before this recommendation</description>
    <label>Pre-requisite action</label>
    <referenceTo>Recommendation__c</referenceTo>
    <relationshipLabel>Follow on actions</relationshipLabel>
    <relationshipName>PreRequisteAction</relationshipName>
    <type>Lookup</type>
</CustomField>