force-app/main/default/objects/Recommendation__c/fields/PreviousInvestmentMandate__c.field-meta.xml
<CustomField>
    <fullName>PreviousInvestmentMandate__c</fullName>
    <description>Used for portfolio switch recommendations, indicates the investment mandate that was previously being used</description>
    <label>Previous investment mandate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OW_Investment_Strategies</valueSetName>
    </valueSet>
</CustomField>