force-app/main/default/objects/Recommendation__c/fields/PrimaryClientName__c.field-meta.xml
<CustomField>
    <fullName>PrimaryClientName__c</fullName>
    <description>The clients name. Used for data tables and should be deleted once the functionality of data tables improves.</description>
    <formula>PrimaryOwner__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary client name</label>
    <type>Text</type>
</CustomField>