force-app/main/default/objects/Recommendation__c/fields/PrimaryOwner__c.field-meta.xml
<CustomField>
    <fullName>PrimaryOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the main client that this recommendation relates to, the primary owner of the destination product</description>
    <label>Primary owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recommendation (Primary owner)</relationshipLabel>
    <relationshipName>Recommendation1</relationshipName>
    <type>Lookup</type>
</CustomField>