force-app/main/default/objects/Recommendation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The type of product this recommendation relates to. Likely only used for open product recommendations</description>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Recommendation</relationshipLabel>
    <relationshipName>Recommendation</relationshipName>
    <type>Lookup</type>
</CustomField>