force-app/main/default/objects/Recommendation__c/fields/ReasonForRetaining__c.field-meta.xml
<CustomField>
    <fullName>ReasonForRetaining__c</fullName>
    <description>The broad reason for retaining this product, which allows us to create MI on this.</description>
    <label>Reason for retaining</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active employer pension</fullName>
            </value>
            <value>
                <fullName>Safeguarded benefits</fullName>
            </value>
            <value>
                <fullName>Segmented pension with previous partial transfer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>