force-app/main/default/objects/Recommendation__c/fields/RecommendationOverview__c.field-meta.xml
<CustomField>
    <fullName>RecommendationOverview__c</fullName>
    <description>Text field for recommendation summary</description>
    <label>Recommendation overview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>