force-app/main/default/objects/Recommendation__c/fields/RecommendationSummary__c.field-meta.xml
<CustomField>
    <fullName>RecommendationSummary__c</fullName>
    <description>Replaced.
Summary of recommendation details to give partners more context when accepting recommendations from a data table</description>
    <formula>RecommendationType__r.Name 
+
IF(
  ISBLANK( Designation__c ),
  &quot;&quot;,
  &quot; | Designated to &quot; + Designation__r.FirstName
)
+
IF(
   RecommendationTypeName__c == &quot;External transfer in&quot; || RecommendationTypeName__c == &quot;Internal transfer&quot; || RecommendationTypeName__c == &quot;Withdrawal - lump sum&quot; || RecommendationTypeName__c == &quot;Withdrawal - regular&quot;,
  &quot; | From &quot; + SourceName__c,
  &quot;&quot;
)
+
IF(
  RecommendationTypeName__c != &quot;Withdrawal - lump sum&quot; &amp;&amp; RecommendationTypeName__c != &quot;Withdrawal - regular&quot;,
  &quot; | &quot; + IF(
   RecommendationTypeName__c == &quot;External transfer in&quot; || RecommendationTypeName__c == &quot;Internal transfer&quot;, &quot; To &quot;, &quot;&quot;)
   + DestinationName__c,
  &quot;&quot;
)
+
IF(
  ISBLANK( Amount__c ) || Amount__c == 0,
  &quot;&quot;,
  &quot; | £&quot; + TEXT(Amount__c)
)
+
IF(
  ISBLANK( EarliestFulfilmentDate__c ),
  &quot;&quot;,
  &quot; | This can&apos;t start until &quot; + TEXT(EarliestFulfilmentDate__c)
)
+
IF(
  ISBLANK( FulfilmentDeadline__c ),
  &quot;&quot;,
  &quot; | This must be done by &quot; + TEXT(FulfilmentDeadline__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recommendation summary</label>
    <type>Text</type>
</CustomField>