force-app/main/default/objects/Recommendation__c/fields/RecommendationType__c.field-meta.xml
<CustomField>
    <fullName>RecommendationType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The type of recommendation, for example rebalance or transfer. The objects held here help determine which fields should be visible on the recommendation.</description>
    <label>Recommendation type</label>
    <referenceTo>RecommendationType__c</referenceTo>
    <relationshipLabel>Recommendation</relationshipLabel>
    <relationshipName>Recommendation</relationshipName>
    <type>Lookup</type>
</CustomField>