force-app/main/default/objects/Recommendation__c/fields/RecommendationTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecommendationTypeName__c</fullName>
    <description>A formula used for displaying the text value of the name of the recommendation type on look up tables. Should be deprecated when the functionality of data tables is improved by Salesforce.</description>
    <formula>RecommendationType__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recommendation type name</label>
    <type>Text</type>
</CustomField>