force-app/main/default/objects/Recommendation__c/fields/RegisteredContact__c.field-meta.xml
<CustomField>
    <fullName>RegisteredContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The adult associated with this junior account</description>
    <inlineHelpText>The adult associated with this junior account</inlineHelpText>
    <label>Registered contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recommendation (Registered contact)</relationshipLabel>
    <relationshipName>Recommendation4</relationshipName>
    <type>Lookup</type>
</CustomField>