force-app/main/default/objects/Recommendation__c/fields/RetainDetails__c.field-meta.xml
<CustomField>
    <fullName>RetainDetails__c</fullName>
    <description>Used when we are recommending that an external product is retained in order to make advice clear in future</description>
    <label>Retain details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>