force-app/main/default/objects/Recommendation__c/fields/SourceLegacy__c.field-meta.xml
<CustomField>
    <fullName>SourceLegacy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The source of funds for this recommendations. Related to pre-CheerIO financial product object.</description>
    <label>Source</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Recommendation (Source)</relationshipLabel>
    <relationshipName>Recommendation1</relationshipName>
    <type>Lookup</type>
</CustomField>