force-app/main/default/objects/Recommendation__c/fields/SourceOfFunds__c.field-meta.xml
<CustomField>
    <fullName>SourceOfFunds__c</fullName>
    <description>Used for cash contributions to indicate the source of funds. List of options is taken from the Hubwise AML requirements.</description>
    <inlineHelpText>Used for cash contributions to indicate the source of funds. List of options is taken from the Hubwise AML requirements.</inlineHelpText>
    <label>Source of funds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dividends or company profits</fullName>
            </value>
            <value>
                <fullName>Divorce</fullName>
            </value>
            <value>
                <fullName>Earnings</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Inheritance</fullName>
            </value>
            <value>
                <fullName>Insurance Claims</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Lottery/gambling win</fullName>
            </value>
            <value>
                <fullName>Maturity/surrender of Life Assurance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other court award (e.g. compensation)</fullName>
            </value>
            <value>
                <fullName>Sale of investments</fullName>
            </value>
            <value>
                <fullName>Sale of property/business</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Employer made payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>