force-app/main/default/objects/Recommendation__c/fields/TransferNotes__c.field-meta.xml
<CustomField>
    <fullName>TransferNotes__c</fullName>
    <description>Free text relating to the type of transfer, eg which funds should be retained in the source policy</description>
    <label>Transfer notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>