force-app/main/default/objects/Recommendation__c/fields/TransferType__c.field-meta.xml
<CustomField>
    <fullName>TransferType__c</fullName>
    <description>Denotes whether transfer is full or partial</description>
    <label>Transfer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>